<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Habbeh</string>
    <string name="action_settings">Settings</string>
    <string name="profileShow">دیدن پروفایل</string>
    <string name="login">ورود</string>
    <string name="habbeh">حبه</string>
    <string name="archiveSaved">آرشیو ذخیره شده</string>
    <string name="register">ثبت نام کن</string>
    <string name="aboutUs">درباره ما</string>
    <string name="searchUsers">جستجوی کاربران</string>
    <string name="onLineMessage">جملک های انلاین</string>
    <string name="findFriends">یافتن دوستان</string>
    <string name="contactUs">تماس با ما</string>
    <string name="sendMessage">ارسال جملک</string>
    <string name="aboutHabbeh">درباره حبه</string>
    <string name="userName">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="renewPassword">تکرار رمز عبور جدید</string>
    <string name="newPassword">رمز عبور جدید</string>
    <string name="forgiveMyPassword">رمز خود را فراموش کردم</string>
    <string name="registeration">ثبت نام</string>
    <string name="dontHaveHabbehAccount">حساب حبه نداری؟</string>
    <string name="emailAddress">آدرس الکترونیک</string>
    <string name="agreeWithHabbehRules">قوانین حبه را مطالعه و قبول دارم</string>
    <string name="loginTo">وارد شو</string>
    <string name="haveHabbehAccount">حساب حبه داری؟</string>
    <string name="forgivinformationEmail">پست الکترونیک خود جهت بازیابی رمز عبور</string>
    <string name="sendEmail">بازیابی رمز</string>
    <string name="userSearch">جستجوی کاربر</string>
    <string name="sendComment">ارسال نظر</string>
    <string name="save">ذخیره</string>
    <string name="changingPassword">تغییر رمز عبور</string>
    <string name="emailLabel">ایمیل :</string>
    <string name="statusLabel">حالت :</string>
    <string name="nameLabel">نام :</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="firstName">نام</string>
    <string name="reportoffending">گزارش تخلف</string>
    <string name="friendRequest">دوستم شو</string>
    <string name="sendmessageinpeopleprofile">ارسال پیام</string>
    <string name="ConnectToInternet">کاربر گرامی : برای بهره مندی از تمامی امکانات برنامه ، گوشی خود را به اینترنت متصل نمائید.</string>
    <string name="GetNewMessage">در حال دریافت جملک های جدید</string>
    <string name="userinformation">در حال دریافت اطلاعات کاربر</string>

</resources>