<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_shape_blue_lighter">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/change_pass" />

    <EditText
        android:id="@+id/changepassword_edittext_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp" 
        android:gravity="right"
        android:inputType="textPassword"
        android:hint="@string/password" >
    </EditText>

    <EditText
        android:id="@+id/changepassword_edittext_newPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="right"
        android:inputType="textPassword"
        android:hint="@string/newPassword" >
    </EditText>

    <EditText
        android:id="@+id/changepassword_edittext_renewPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="right"     
        android:inputType="textPassword"          
        android:hint="@string/renewPassword" >
    </EditText>

    <Button
        android:id="@+id/changepassword_button_Changepassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"  
        android:background="@drawable/background_selector_blue_darker"
        android:textColor="@color/solid_white"
        android:layout_margin="10dp"             
        android:text="@string/changingPassword" />

</LinearLayout>