<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_shape_blue_lighter">

    <ImageView
        android:id="@+id/userprofile_imageView_UserPicture"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/habbeh"        
        android:background="@drawable/background_selector_green" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@color/solid_white" >

            <EditText
                android:id="@+id/userprofile_edittext_UserLastName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:inputType="text"/>

            <EditText
                android:id="@+id/userprofile_edittext_UserFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/nameLabel"
                android:textSize="15dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@color/solid_white" >

            <EditText
                android:id="@+id/userprofile_edittext_UserStatus"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="text"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/statusLabel"
                android:textSize="15dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"            
            android:background="@color/solid_white" >

            <EditText
                android:id="@+id/userprofile_edittext_UserEmail"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/emailLabel"
                android:textSize="15dip" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp">

            <Button
                android:id="@+id/userprofile_button_changePassword"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_selector_blue_darker"
                android:textColor="@color/solid_white" 
                android:text="@string/changingPassword" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/habbeh"
                android:background="@drawable/change_pass_icon" />
        </FrameLayout>

        <Button
            android:id="@+id/userprofile_button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_selector_blue_darker"
            android:text="@string/save"
            android:textColor="@color/solid_white" />
    </LinearLayout>

</LinearLayout>